@@ -1,3 +1,9 @@
+2003-10-20  John Levon  <levon@movementarian.org>
+
+	* libpp/arrange_profiles.cpp: if tid == tgid for
+	every profile class, allow axes of both TID and TGID
+	- there is no actual difference, only theoretical
+
 2003-10-20  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* dae/oprofiled.c: correct an error message
